# materwelon

./: .gitignore  Justfile  MANUAL.md  README.md  SPEC.md  build.zig  build.zig.zon  flake.nix
firmware/: CMakeLists.txt  main.c  uros.c
firmware/libmicroros/: .gitignore  README
scripts/: send.py
src/: main.zig  parse.zig
src/lang/: ast.zig  env.zig  errors.zig  eval.zig  eval_test.zig  lexer.zig  ops.zig  parser.zig  root.zig  servo.zig  stdlib.zig  value.zig
src/platform/: host.zig  rp2350.zig
src/shell/: repl.zig  root.zig
tools/: find_port.zig
